tests/snapshots/run_wpt_conformance__trtx_gatherND_float16_4D_input_and_1D_uint32_indices.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "gatherND.https.any.js",
    "gatherND float16 4D input and 1D uint32 indices",
    "trtx",
    Failed {
        msg: Some(
            "An error in the Trtx: Runtime error: setNamedWeights (with location) rejected\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    gatherNDInput: f16[2, 2, 2, 2];\n  }\n\n  consts {\n    operand_0: u32[3] @bytes([1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]);\n  }\n\n  nodes {\n    [gatherNDOutput] = gatherND(gatherNDInput, operand_0, label=\"\");\n  }\n\n  outputs { gatherNDOutput; }\n}\n",
        ),
    },
)
